[⚙️] All controllers and validations